# web-article-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/web_article_extractor/: __init__.py  __main__.py  web.py  youtube.py
tests/: test_web.py  test_youtube.py
