[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "harnais-web-extractor"
version = "0.1.1"
description = "Two-stage web article extractor (trafilatura + Playwright) with YouTube transcript fetching."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "John Linotte", email = "contact@harnais.be" }]
keywords = ["scraping", "article", "extraction", "trafilatura", "playwright", "youtube", "transcript"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "trafilatura",
    "playwright",
]

[project.optional-dependencies]
youtube = ["yt-dlp"]
whisper = ["faster-whisper"]
test = ["pytest"]

[project.urls]
Homepage = "https://harnais.be"
Repository = "https://github.com/JohnLinotte/web-article-extractor"

[project.scripts]
harnais-web-extractor = "web_article_extractor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
